# CS8803CGAI-FinalProject

./: .gitignore  CMakeLists.txt
Config/: basic.json  cloud.json
Shader/: BasicSceneVertex.glsl
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/tinyply/include/tinyply/: tinyply.h
src/: Array.h  Definition.h  Grid.h  MathUtils.cpp  MathUtils.h  Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsRules.cpp  PhysicsRules.h  Transform.h  main.cpp
src/Render/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
